--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "mongoose": "^8.8.1",
         "nodemailer": "^6.9.16",
         "nodemon": "^3.1.7",
+        "otp-generator": "^4.0.1",
         "socket.io": "^4.8.1",
         "uuid": "^11.0.3",
         "zod": "^3.23.8"
