--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "description": "",
     "dependencies": {
         "@bull-board/express": "^6.5.3",
+        "aws-sdk": "^2.1691.0",
         "bcrypt": "^5.1.1",
         "bull": "^4.16.4",
         "cors": "^2.8.5",
@@ -26,6 +27,8 @@
         "ioredis": "^5.4.1",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.8.1",
+        "multer": "^1.4.5-lts.1",
+        "multer-s3": "^2.10.0",
         "nodemailer": "^6.9.16",
         "nodemon": "^3.1.7",
         "otp-generator": "^4.0.1",
