--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "npm run lint:fix && npx nodemon src/index.js",
+        "start": "npx nodemon src/index.js",
         "format": "prettier --write .",
-        "lint": "eslint . ",
-        "lint:fix": "eslint . --fix "
+        "lint": "eslint . --fix"
     },
     "keywords": [],
     "author": "",
@@ -42,7 +41,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
-        "eslint": "^9.15.0",
+        "eslint": "^9.22.0",
         "globals": "^15.12.0",
         "prettier": "^3.3.3"
     }
