--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "bcrypt": "^5.1.1",
         "bull": "^4.16.4",
         "cors": "^2.8.5",
+        "debug": "^4.4.0",
         "dotenv": "^16.4.5",
         "eslint-plugin-simple-import-sort": "^12.1.1",
         "express": "^4.21.1",
@@ -33,7 +34,6 @@
         "multer": "^1.4.5-lts.1",
         "multer-s3": "^2.10.0",
         "nodemailer": "^6.9.16",
-        "nodemon": "^3.1.7",
         "otp-generator": "^4.0.1",
         "socket.io": "^4.8.1",
         "uuid": "^11.0.3",
@@ -43,6 +43,7 @@
         "@eslint/js": "^9.15.0",
         "eslint": "^9.22.0",
         "globals": "^15.12.0",
+        "nodemon": "^3.1.9",
         "prettier": "^3.3.3"
     }
 }
