--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "npx nodemon src/index.js",
+        "start": "node src/index.js",
         "format": "prettier --write .",
         "lint": "eslint . --fix"
     },
